feat: tracking lambda executions are optional

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,17 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pylambdatasks"
-version = "0.1.3"
+version = "0.1.4"
 description = "A library to simplify creating AWS Lambda images and managing multiple tasks within one image."
 
 authors = [
   { name="Oktylab", email="contact@oktylab.com" },
-  { name="Crosspost", email="services@crosspost.app"}
+  { name="Crosspost", email="services@crosspost.app" }
+]
+
+maintainers = [
+  { name = "oktylab", email="contact@oktylab.com" },
+  { name = "Crosspost", email = "services@crosspost.app" }
 ]
 
 readme = "README.md"
